Set up MySQL database and JDBC connection